// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu closed 1`] = `
<div
  className="Menu__Container-mw2r80-0 dFPRWx"
  width="300px"
>
  <div>
    content
  </div>
</div>
`;

exports[`Menu custom color 1`] = `
<div
  className="Menu__Container-mw2r80-0 blzAXK"
  width="300px"
>
  <div>
    content
  </div>
</div>
`;

exports[`Menu custom duration 1`] = `
<div
  className="Menu__Container-mw2r80-0 gYnSRY"
  width="300px"
>
  <div>
    content
  </div>
</div>
`;

exports[`Menu default 1`] = `
<div
  className="Menu__Container-mw2r80-0 gYnSRY"
  width="300px"
>
  <div>
    content
  </div>
</div>
`;

exports[`Menu position left 1`] = `
<div
  className="Menu__Container-mw2r80-0 kDZNpz"
  width="300px"
>
  <div>
    content
  </div>
</div>
`;

exports[`Menu position left closed 1`] = `
<div
  className="Menu__Container-mw2r80-0 idrNim"
  width="300px"
>
  <div>
    content
  </div>
</div>
`;
